fix: made eye icon smaller

--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -512,8 +512,8 @@ span.section-info {
   vertical-align: middle;
   position: absolute;
   right: 0;
-  height: 20px;
-  width: 25px;
+  height: 16px;
+  width: 20px;
 }
 
 .step-forward,
